add booking report module

--- a/flights/templates/emails/bookkng_email.html
+++ b/flights/templates/emails/bookkng_email.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="main">
-        <h3>Flight Details (Flight No {{ booking.flight.airline.fight_number }})</h3>
+        <h3>Flight Details (Flight No {{ booking.flight.airline.flight_number }})</h3>
         <p><strong>From: </strong>{{ booking.flight.from_location }}</p>
         <p><strong>To: </strong>{{ booking.flight.to_location }}</p>
         <p><strong>Departure Time: </strong>{{ booking.flight.departure_time }}</p>
