moved js and css code to individuale files

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -16,46 +16,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
     <script src="{% static 'js/api_calls.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
-
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      html {
-        font-size: 14px;
-      }
-      @media (min-width: 768px) {
-        html {
-          font-size: 16px;
-        }
-      }
-      
-      .container {
-        max-width: 960px;
-      }
-      
-      .pricing-header {
-        max-width: 700px;
-      }
-      
-      .card-deck .card {
-        min-width: 220px;
-      }
-    </style>
   </head>
   <body>
     
@@ -70,18 +32,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-    <script>
-            $(document).ready(function(){
-              var date_input=$('input[name="departure_time"]'); //our date input has the name "date"
-              var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
-              var options={
-                format: 'yyyy-mm-dd',
-                container: container,
-                todayHighlight: true,
-                autoclose: true,
-              };
-              date_input.datepicker(options);
-            })
-    </script>
+    <script src="{% static 'js/init.js' %}"></script>
 </body>
 </html>
