--- a/frontend/templates/partials/_navbar.html
+++ b/frontend/templates/partials/_navbar.html
@@ -19,9 +19,9 @@
         <a class="p-2 text-dark" onclick="logout();" href="#">Logout</a>
     `
     if(!isLogedIn()) {
-        _('notLoggedIn').innerHTML = notLoggedIn;
+        elmById('notLoggedIn').innerHTML = notLoggedIn;
     } else {
-        _('notLoggedIn').innerHTML = loggedIn;
+        elmById('notLoggedIn').innerHTML = loggedIn;
     }
 
 </script>
