allow user to book for a flight and view booking history

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
-    <script src="{% static 'js/api_calls.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
   </head>
