allow user to view profile details

--- a/frontend/templates/partials/_navbar.html
+++ b/frontend/templates/partials/_navbar.html
@@ -17,6 +17,7 @@
     `
     const loggedIn = `
         <a class="p-2 text-dark" href="{% url 'booking' %}">Booking</a>
+        <a class="p-2 text-dark" href="{% url 'profile' %}">Profile</a>
         <a class="p-2 text-dark" onclick="logout();" href="#">Logout</a>
     `
     if(!isLogedIn()) {
