add select option for fron and to location in search form

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -18,12 +18,40 @@
              <form method="get" action='/result'>
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                      <label for="firstName">Flying From</label>
-                      <input type="text" class="form-control" name="from_location" id="firstName" placeholder="" value="" required="">
+                      <label for="from_location">Flying From</label>
+                      <select name="from_location" id="from_location">
+                        <option label="From" value="">From</option>
+                        <option label="Lagos (LOS)" value="Lagos">Lagos (LOS)</option>
+                        <option label="Abuja (ABV)" value="Abuja">Abuja (ABV)</option>
+                        <option label="Port Harcourt (PHC)" value="Port Harcourt">Port Harcourt (PHC)</option>
+                        <option label="Bauchi (BCU)" value="Bauchi">Bauchi (BCU)</option>
+                        <option label="Benin (BNI)" value="Benin">Benin (BNI)</option>
+                        <option label="Gombe (GMO)" value="Gombe">Gombe (GMO)</option>
+                        <option label="Ibadan (IBA)" value="Ibadan">Ibadan (IBA)</option>
+                        <option label="Ilorin (ILR)" value="Ilorin">Ilorin (ILR)</option>
+                        <option label="Jos (JOS)" value="Jos">Jos (JOS)</option>
+                        <option label="Kaduna (KAD)" value="Kaduna">Kaduna (KAD)</option>
+                        <option label="Sokoto (SKO)" value="Sokoto">Sokoto (SKO)</option>
+                        <option label="Yola (YOL)" value="Yola">Yola (YOL)</option>
+                      </select>
                     </div>
                     <div class="col-md-6 mb-3">
-                      <label for="lastName">Flying To</label>
-                      <input type="text" class="form-control" name="to_location" id="lastName" placeholder="" value="" required="">
+                      <label for="to_location">Flying To</label>
+                      <select name="to_location" id="to_location">
+                        <option label="To" value="">To</option>
+                        <option label="Lagos (LOS)" value="Lagos">Lagos (LOS)</option>
+                        <option label="Abuja (ABV)" value="Abuja">Abuja (ABV)</option>
+                        <option label="Port Harcourt (PHC)" value="Port Harcourt">Port Harcourt (PHC)</option>
+                        <option label="Bauchi (BCU)" value="Bauchi">Bauchi (BCU)</option>
+                        <option label="Benin (BNI)" value="Benin">Benin (BNI)</option>
+                        <option label="Gombe (GMO)" value="Gombe">Gombe (GMO)</option>
+                        <option label="Ibadan (IBA)" value="Ibadan">Ibadan (IBA)</option>
+                        <option label="Ilorin (ILR)" value="Ilorin">Ilorin (ILR)</option>
+                        <option label="Jos (JOS)" value="Jos">Jos (JOS)</option>
+                        <option label="Kaduna (KAD)" value="Kaduna">Kaduna (KAD)</option>
+                        <option label="Sokoto (SKO)" value="Sokoto">Sokoto (SKO)</option>
+                        <option label="Yola (YOL)" value="Yola">Yola (YOL)</option>
+                      </select>
                     </div>
                   </div>
                <div class="form-group"> <!-- Date input -->
